--- a/image_processing.css
+++ b/image_processing.css
@@ -1,55 +1,56 @@
 #title {
-    text-align: center;
+  text-align: center;
 }
 
 #form {
-    text-align: center;
+  text-align: center;
 }
 
 #canvas-container {
-    text-align: center;
+  text-align: center;
 }
 
 #inCanvas {
-    display: inline;
+  display: inline;
 }
 
 #outCanvas {
-    display: inline;
+  display: inline;
 }
 
 @font-face {
-    font-family: "seoulNamsan";
-    src: url("./08SeoulNamsanB_0.ttf") format("truetype");
+  font-family: 'seoulNamsan';
+  src: url('./font/08SeoulNamsanB_0.ttf') format('truetype');
 }
 
 body {
-    font-family: "seoulNamsan";
-    background-color: #fffee6;
+  font-family: 'seoulNamsan';
+  background-color: #fffee6;
 }
-  
+
 #header {
-    padding-top: 10px;
-    margin-top: 0%;
+  padding-top: 10px;
+  margin-top: 0%;
 }
 
 #input-file-button {
-    padding: 6px 25px;
-    background-color: #e2495b !important;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
+  padding: 6px 25px;
+  background-color: #e2495b !important;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
 }
 
 /* IE */
-select::-ms-expand { 
-	display: none;
+select::-ms-expand {
+  display: none;
 }
 
 .select {
   width: 170px;
   height: 35px;
-  background: url('https://freepikpsd.com/media/2019/10/down-arrow-icon-png-7-Transparent-Images.png') calc(100% - 5px) center no-repeat;
+  background: url('https://freepikpsd.com/media/2019/10/down-arrow-icon-png-7-Transparent-Images.png')
+    calc(100% - 5px) center no-repeat;
   background-size: 20px;
   padding: 5px 30px 5px 10px;
   border-radius: 4px;
@@ -60,7 +61,7 @@ select::-ms-expand {
 }
 
 .select option {
-    background: white;
-    color: black;
-    padding: 3px 0;
-  }
+  background: white;
+  color: black;
+  padding: 3px 0;
+}
